--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@apollo/client": "^3.3.21",
+    "apollo-link-context": "^1.0.20",
+    "formik": "^2.2.9",
+    "graphql": "^15.5.1",
+    "next": "^11.1.2",
+    "node-fetch": "^2.6.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-select": "^4.3.1",
+    "sweetalert2": "^11.0.19",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2"
+    "eslint-config-next": "13.4.2",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
